# 1Panel-dev--MaxKB

./: acceptance.md  db.sqlite3  goal.md  progress.md  pyproject.toml  todo.md
apps/application/: chat_models.py  models.py  serializers.py  urls.py  views.py
apps/common/: chunking.py  search.py
apps/knowledge/: apps.py  models.py  serializers.py  urls.py  views.py
apps/models_provider/: __init__.py  base.py  models.py  serializers.py  urls.py  views.py
apps/models_provider/providers/: __init__.py  openai_provider.py
apps/users/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
knowledgebot/: __init__.py
knowledgebot/api/: __init__.py  users.py
knowledgebot/applications/: __init__.py  models.py  service.py
knowledgebot/chat/: __init__.py  service.py
knowledgebot/core/: auth.py  chunking.py  embeddings.py  models.py  vectorstore.py
knowledgebot/knowledge/: __init__.py  documents.py  models.py  processing.py  service.py
knowledgebot/providers/: __init__.py  llm.py
tests/: test_api_users.py  test_application.py  test_applications.py  test_auth.py  test_chat.py  test_chunking.py  test_document.py  test_documents.py  test_embedding.py  test_embeddings.py  test_knowledge.py  test_llm.py  test_models_provider.py  test_paragraph.py  test_problem.py  test_processing.py  test_search.py  test_tags.py  test_users.py  test_vectorstore.py
