[project]
name = "maxkb"
version = "1.0.0"
description = "Enterprise-grade AI agent platform with RAG capabilities"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
